[fix] add jackwang.studio link, refactored html, adjust video height to full screen on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,7 @@ $H1Color: #b5a997;
 $BGColor: #0e0f0f;
 $white: #ffffff;
 $historyFontColor: #444c4c;
+$JWstudio: $reactColor;
 
 // break points
 $sm: 425px;
@@ -14,7 +15,6 @@ $lg: 1280px;
 * {
   margin: 0;
   padding: 0;
-  // border: 1px solid green;
   box-sizing: border-box;
   color: $white;
   font-family: "Inter", sans-serif;
@@ -40,12 +40,40 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: $BGColor;
+  flex-direction: column;
+  min-width: 320px;
+
+
+  header {
+    max-width: 1280px;
+    position: absolute;
+    width: 100%;
+    height: 0px;
+    top: 0;
+    z-index: 2;
+    nav.navbar {
+      display: flex;
+      justify-content: space-between;
+      font-weight: 700;
+      line-height: 25px;
+      padding: 1rem;
+      text-align: right;
+      width: 100%;
+      ul {
+        list-style: none;
+
+        a {
+          text-decoration: none;
+        }
+      }
+    }
+  }
 
   main {
     max-width: 1280px;
     width: 100%;
-    // min-width: 320px;
 
     section {
       .sub_heading {
@@ -65,23 +93,6 @@ body {
       height: 773px;
       position: relative;
       margin-bottom: 8rem;
-
-      nav.navbar {
-        display: flex;
-        justify-content: space-between;
-        font-weight: 700;
-        line-height: 25px;
-        padding: 1rem;
-        text-align: right;
-
-        ul {
-          list-style: none;
-
-          a {
-            text-decoration: none;
-          }
-        }
-      }
 
       img {
         position: absolute;
@@ -254,6 +265,8 @@ body {
 
       video {
         width: 100%;
+        height: 100vh;
+        object-fit: cover;
       }
     }
 
@@ -368,6 +381,19 @@ body {
       }
     }
   }
+
+  footer {
+    span {
+      padding-top: 3rem;
+      padding-bottom: 1rem;
+      font-style: italic;
+      font-size:12px;
+      a {
+        font-weight:700;
+        color: $JWstudio;
+      }
+    }
+  }
 }
 
 @media (min-width: $md) {
@@ -406,6 +432,13 @@ body {
           .text {
             font-size: 80px !important;
           }
+        }
+      }
+
+      section.video {
+        video {
+          object-fit: contain;
+          height: fit-content;
         }
       }
 
